@@ -1,3 +1,8 @@
+2008-09-24  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOMethod.c (DBPRINT): Remove obsolete debugging macro.
+	[Bug 2124814]
+
 2008-09-23  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/Method.3: Corrected documentation. [Patch 2082450]
